test-harness/src/snapshots/toolchain__mut_arg lint-hacspec.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Lint:
      linter: hacspec
  info:
    name: mut_arg
    manifest: lint/hacspec/mut_args/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = '''
Compiling mut_arg v0.1.0 (WORKSPACE_ROOT/lint/hacspec/mut_args)
warning: [Hax] Mutable arguments are not supported
 --> lint/hacspec/mut_args/src/lib.rs:1:23
  |
1 | pub fn add(left: &mut usize, right: usize) {
  |                       ^^^^^

warning: `mut_arg` (lib) generated 1 warning
    Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'''
stdout = ''
